MIR-919 do not use deprecated or forbidden code