@@ -16,7 +16,7 @@ public class MIRDateConverter {
         try {
             String formatterClassName = "org.mycore.mir.date.MIR" + format.toUpperCase(Locale.ROOT) + "Formatter";
             MIRDateFormatterInterface formatter = (MIRDateFormatterInterface) Class.forName(formatterClassName)
-                .newInstance();
+                .getDeclaredConstructor().newInstance();
             return getFormatedDateString(date, formatter.getFormatter(date));
         } catch (Exception e) {
             LogManager.getLogger().warn("Error while converting " + date + " from format " + format, e);
@@ -29,19 +29,19 @@ public class MIRDateConverter {
             LocalDateTime::from, LocalDate::from, YearMonth::from, Year::from);
         if (ta instanceof LocalDateTime) {
             LocalDateTime ld = LocalDateTime.from(ta);
-            return ld.format(DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss"));
+            return ld.format(DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss", Locale.ROOT));
         }
         if (ta instanceof LocalDate) {
             LocalDate ld = LocalDate.from(ta);
-            return ld.format(DateTimeFormatter.ofPattern("yyyy-MM-dd"));
+            return ld.format(DateTimeFormatter.ofPattern("yyyy-MM-dd", Locale.ROOT));
         }
         if (ta instanceof YearMonth) {
             YearMonth ld = YearMonth.from(ta);
-            return ld.format(DateTimeFormatter.ofPattern("yyyy-MM"));
+            return ld.format(DateTimeFormatter.ofPattern("yyyy-MM", Locale.ROOT));
         }
         if (ta instanceof Year) {
             Year ld = Year.from(ta);
-            return ld.format(DateTimeFormatter.ofPattern("yyyy"));
+            return ld.format(DateTimeFormatter.ofPattern("yyyy", Locale.ROOT));
         }
         return date;
     }
